--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 
 form {
   background-color: #9554ad;
-  padding-bottom: 10px;
-  margin-bottom: 20px;
+  padding: 10px;
+  margin: 20px;
 }
 
 .main-label {
